--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -30,7 +30,7 @@ html { box-sizing: border-box; }
 
 code, pre { font-family: Monaco, Menlo, Consolas, "Courier New", monospace; }
 
-/* spesifically inline code */
+/* specifically inline code */
 code, pre {
   background: rgba(255,255,255,0.2);
   display: inline;
