--- a/_includes/css/base.css
+++ b/_includes/css/base.css
@@ -99,6 +99,7 @@
 ================================================== */
 	a, a:visited { text-decoration: underline; outline: 0; }
 	a:hover, a:focus { }
+	nav a:hover, a:focus { text-decoration: none; color: #ffffff; }
 	p a, p a:visited { line-height: inherit; }
 
 
